# Pink-Bot

./: .env.example  .gitignore  API_DOCS.md  INSTALLATION.md  INTEGRATION.md  QUICKSTART.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  example.py  pyproject.toml  requirements.txt  setup.sh  start_api.sh  start_integrated.bat  start_integrated.sh  system_prompt.txt  test_api.py  test_groq_key.py
src/chatbruti/: __init__.py  api_server.py  main.py
src/chatbruti/api/: __init__.py  server.py
src/chatbruti/config/: settings.py
src/chatbruti/models/: __init__.py  base.py  factory.py  groq_model.py  huggingface_model.py
src/chatbruti/utils/: __init__.py  conversation.py  system_prompt.py
widget-UI/: README.md  index.html  package-lock.json  package.json
widget-UI/src/: App.tsx  index.css
widget-UI/src/components/Chatbot/: ChatMessage.tsx  ChatbotWidget.tsx  chatConfig.ts  useChatLogic.ts
widget-UI/src/components/ui/: avatar.tsx  button.tsx  input.tsx
widget-UI/src/config/: chatConfig.js
